--- a/__chsh/kali/c2/_c2.txt.md
+++ b/__chsh/kali/c2/_c2.txt.md
@@ -50,5 +50,7 @@ https://adaptix-framework.gitbook.io/adaptix-framework/adaptix-c2/getting-starti
 > `./adaptixserver -profile ./profile.json`  
 > `./AdaptixClient`  
 
+![image](https://github.com/user-attachments/assets/3261d5b5-822a-461f-93af-48dd3c8b6f67)
+
 
 
