--- a/__chsh/kali/c2/_c2.txt.md
+++ b/__chsh/kali/c2/_c2.txt.md
@@ -52,5 +52,6 @@ https://adaptix-framework.gitbook.io/adaptix-framework/adaptix-c2/getting-starti
 
 ![image](https://github.com/user-attachments/assets/3261d5b5-822a-461f-93af-48dd3c8b6f67)
 
+![image](https://github.com/user-attachments/assets/944df1e9-5a2a-49b0-9dd7-2ce1c4e6d4fe)
 
 
