--- a/__chsh/kali/c2/_c2.txt.md
+++ b/__chsh/kali/c2/_c2.txt.md
@@ -54,4 +54,5 @@ https://adaptix-framework.gitbook.io/adaptix-framework/adaptix-c2/getting-starti
 
 ![image](https://github.com/user-attachments/assets/944df1e9-5a2a-49b0-9dd7-2ce1c4e6d4fe)
 
+![image](https://github.com/user-attachments/assets/a4221a20-2548-4916-9424-0bd8f3562c3b)
 
